# GenerateAndTest

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  regenerate
.github/workflows/: pluginbuild.yml
plugins/Disperser/: Disperser.cpp  Disperser.hpp
plugins/Disperser/HelpSource/: Disperser.schelp
plugins/FilterBank/: FilterBank.cpp  FilterBank.hpp
plugins/FilterBank/Classes/: FilterBank.sc
plugins/FilterBank/HelpSource/: FilterBank.schelp
plugins/SuperSawOS/: SuperSawOS.cpp  SuperSawOS.hpp
plugins/SuperSawOS/Classes/: SuperSawOS.sc
plugins/SuperSawOS/HelpSource/: SuperSawOS.schelp
plugins/Utils/: Utils.hpp
